--- a/metadata.ini
+++ b/metadata.ini
@@ -1,1 +1,24 @@
+;copy the collection 1 and remove the semi colons
+;add in the name for the collection under general. seperate with a ','
 
+[general]
+collections=QPWS
+
+;[collection 1]
+;name=
+;author=
+;email=
+;tags=
+;description=
+;qgis_minimum_version=
+;qgis_maximum_version=
+
+[QPWS]
+name=QPWS
+author=Shaun Kolomeitz
+email=kolomes@gmail.com
+tags=queensland, environment, protected areas, national parks, wildlife
+description=Queensland Parks and Wildlife collection of symbols
+qgis_minimum_version=3.3x
+qgis_maximum_version=3.34
+license = cc0
