--- a/metadata.ini
+++ b/metadata.ini
@@ -16,9 +16,9 @@ collections=QPWS
 [QPWS]
 name=QPWS
 author=Shaun Kolomeitz
-email=kolomes@gmail.com
+email=
 tags=queensland, environment, protected areas, national parks, wildlife
 description=Queensland Parks and Wildlife collection of symbols
-qgis_minimum_version=3.3x
-qgis_maximum_version=3.34
+qgis_minimum_version=
+qgis_maximum_version=
 license = cc0
