--- a/metadata.ini
+++ b/metadata.ini
@@ -6,8 +6,7 @@ name=QPWS
 author=Shaun Kolomeitz
 email=
 tags=queensland, environment, protected areas, national parks, wildlife
-description=These files emulate the internal representation of the Queensland Parks and Wildlife Service, Protected Area Estate. The cover both the representation of the Estate Polygon FILLs and the Estate Boundary (EstateBY) Outline colours. They do not contain the current Label definition, which uses the NAMEABBREV (Abbreviated Estate name) as the Label.
-This data was uploaded on the 3rd April 2024.
+description=These files emulate the internal representation of the Queensland Parks and Wildlife Service, Protected Area Estate. The cover both the representation of the Estate Polygon FILLs and the Estate Boundary (EstateBY) Outline colours. They do not contain the current Label definition, which uses the NAMEABBREV (Abbreviated Estate name) as the Label. This data was uploaded on the 3rd April 2024.
 qgis_minimum_version=
 qgis_maximum_version=
 license = cc0
