--- a/metadata.ini
+++ b/metadata.ini
@@ -7,6 +7,6 @@ author=Shaun Kolomeitz
 email=
 tags=queensland, environment, protected areas, national parks, wildlife
 description=These files emulate the internal representation of the Queensland Parks and Wildlife Service, Protected Area Estate. The cover both the representation of the Estate Polygon FILLs and the Estate Boundary (EstateBY) Outline colours. They do not contain the current Label definition, which uses the NAMEABBREV (Abbreviated Estate name) as the Label.
-qgis_minimum_version=
-qgis_maximum_version=
+qgis_minimum_version=2.0
+qgis_maximum_version=3.99
 license = cc0
