--- a/metadata.ini
+++ b/metadata.ini
@@ -1,8 +1,8 @@
 [general]
-collections=QPWS
+collections=qpws
 
 [QPWS]
-name=QPWS
+name=qpws
 author=Shaun Kolomeitz
 email=
 tags=qld,environment,protected areas,national parks,wildlife
