--- a/metadata.ini
+++ b/metadata.ini
@@ -1,11 +1,20 @@
 [general]
-collections=qpws
+collections=QPWS, QLD Vegetation Management,
 
-[qpws]
-name=qpws
+[QPWS]
+name=QPWS
 author=Shaun Kolomeitz
 email=
 tags=qld,environment,protected areas,national parks,wildlife
 description=These files emulate the internal representation of the Queensland Parks and Wildlife Service, Protected Area Estate.
+qgis_minimum_version=2.0
+qgis_maximum_version=3.99
+
+[QLD Vegetation Management]
+name=QLD Vegetation Management
+author=QLD Globe
+email=
+tags=qld,environment,protectedareas,vegetation,wetlands,waterways,regionalecosystem
+description=These files were taken from the QLD Government online vegetation management data files
 qgis_minimum_version=2.0
 qgis_maximum_version=3.99
