--- a/metadata.ini
+++ b/metadata.ini
@@ -1,5 +1,5 @@
 [general]
-collections=QPWS,QLD Vegetation Management
+collections=QPWS,QLD-Vegetation-Management
 
 [QPWS]
 name=QPWS
@@ -10,8 +10,8 @@ description=These files emulate the internal representation of the Queensland Pa
 qgis_minimum_version=2.0
 qgis_maximum_version=3.99
 
-[QLD Vegetation Management]
-name=QLD Vegetation Management
+[QLD-Vegetation-Management]
+name=QLD-Vegetation-Management
 author=QLD Globe
 email=
 tags=qld,environment,protectedareas,vegetation,wetlands,waterways,regionalecosystem
