amended names and added preview

--- a/metadata.ini
+++ b/metadata.ini
@@ -1,20 +1,19 @@
 [general]
-collections=QPWS,QLD-Vegetation-Management
+collections=qpws,qld_veg_management
 
-[QPWS]
+[qpws]
 name=QPWS
 author=Shaun Kolomeitz
-email=
-tags=qld,environment,protectedareas,nationalparks,wildlife
+tags=qld, environment, protected areas, national parks, wildlife
 description=These files emulate the internal representation of the Queensland Parks and Wildlife Service, Protected Area Estate.
 qgis_minimum_version=2.0
-qgis_maximum_version=3.99
+qgis_maximum_version=3.90
+preview=preview/QPWS_estate_FILL.png
 
-[QLD-Vegetation-Management]
+[qld_veg_management]
 name=QLD-Vegetation-Management
 author=QLD Globe
-email=
-tags=qld,environment,protectedareas,vegetation,wetlands,waterways,regionalecosystem
+tags=qld, environment, protected areas, vegetation, wetlands, waterways, regional ecosystem
 description=These files were taken from the QLD Government online vegetation management data files
 qgis_minimum_version=2.0
-qgis_maximum_version=3.99
+qgis_maximum_version=3.90
